# sn11-finetune

./: .env.example  .gitignore  dataset-pipeline.md  miner.md  pyproject.toml  sandbox.py  security-and-incentives.md  sn11-finetune.md  validator.md
base_harness/: README.md  __init__.py  compaction.py  context.py  example_miner.py  harness.py  llm.py  loader.py  prompt.py  promptkit.py  session.py  skill.py  toolkit.py
scaffold/: README.md  __init__.py  compaction.py  example_miner.py  harness.py  llm.py  loader.py  prompt.py  promptkit.py  session.py  skill.py  toolkit.py
scaffold/skills/: system.md
scenarios/: _index.json
scenarios/acl-permissions-inheritance/: instruction.md  task.yaml
scenarios/broken-networking/: instruction.md  task.yaml
scenarios/broken-python/: instruction.md  task.yaml
scenarios/build-cython-ext/: task.yaml
scenarios/build-initramfs-qemu/: instruction.md  task.yaml
scenarios/build-linux-kernel-qemu/: instruction.md  task.yaml
scenarios/build-pmars/: task.yaml
scenarios/build-pov-ray/: task.yaml
scenarios/build-stp/: instruction.md  task.yaml
scenarios/build-tcc-qemu/: instruction.md  task.yaml
scenarios/compile-compcert/: task.yaml
scenarios/conda-env-conflict-resolution/: instruction.md  task.yaml
scenarios/configure-git-webserver/: task.yaml
scenarios/create-bucket/: instruction.md  task.yaml
scenarios/cron-broken-network/: instruction.md  task.yaml
scenarios/deterministic-tarball/: instruction.md  task.yaml
scenarios/fibonacci-server/: instruction.md  task.yaml
scenarios/fix-git/: task.yaml
(+221 files in other folders)
